# forecast

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  date_binning.ipynb  example_calcs.ipynb  mypy.ini  pyproject.toml  readme.md  temp_example_calcs.ipynb
.github/workflows/: convert_jupyter.yml  release.yml  tests.yml
date_binning/: __init__.py  date_binning.py
docs/: date_binning.md  example_calcs.html  example_calcs.md
forecast/: __init__.py  date_binning.py  forecast.py
tests/: test_date_binning.py  test_forecast.py
