[tool.poetry]
name = "forecast"
version = "0.1.0"
description = "Generic forecast utilities"
authors = ["Tyler Matteson <tyler@agritheory.com>", "Heather Kusmierz <heather.kusmierz@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.14.0"

[tool.poetry.dev-dependencies]
nbdev = "^2.3.25"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
matplotlib = "^3.3.0"
jupyterlab = "^2.2.5"
black = "^20.8b1"
