[tool.poetry]
name = "forecast"
version = "0.1.0"
description = "Generic forecast utilities"
authors = ["Tyler Matteson <tyler@agritheory.com>", "Heather Kusmierz <heather.kusmierz@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.25"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
matplotlib = "^3.3.0"
jupyterlab = "^2.2.5"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
