[tool.poetry]
name = "forecast"
version = "0.4.0"
description = "Generic forecast utilities"
authors = ["Tyler Matteson <tyler@agritheory.com>", "Heather Kusmierz <heather.kusmierz@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.14.0"

[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.25"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
matplotlib = "^3.3.0"
jupyterlab = "^2.2.5"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4
requires =  
    tox-gh-actions>=3
envlist = py310, py311, py312, linting

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312, linting

[testenv]
skip_install = true
allowlist_externals = poetry
commands_pre =
    poetry install

[testenv:linting]
description = run linters
commands_pre =
    poetry install
    python -m pip install flake8
    python -m pip install mypy
    python -m pip install black git+https://github.com/agritheory/black.git
    mypy ./ --install-types --non-interactive
commands = 
    flake8 ./forecast
    mypy ./forecast --ignore-missing-imports
    black --check .

[testenv:py310]
description = run pytest on 3.10
commands =
    pytest tests/ --disable-warnings -s

[testenv:py311]
description = run pytest on 3.11
commands =
    pytest tests/ --disable-warnings -s

[testenv:py312]
description = run pytest and coverage on 3.12
commands =
    pytest tests/ --cov=forecast --cov-report=xml --disable-warnings -s
"""

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variable = [
    "forecast/__init__.py:__version__"
]

[tool.semantic_release.branches.version]
match = "main"
